<resources>
    <string name="app_name">PhysBasic</string>

    <string name="app_name_with_index">PdfRendererBasic (%1$d/%2$d)</string>
    <string name="info">Info</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="title_tests">Tests</string>
    <string name="title_chapters">All Chapters</string>
    <string name="title_specials">Special Problems</string>


    <string name="standart_text">Standart</string>
    <string name="premium_text">Premium</string>
    <string name="vip_text">Vip</string>

    <string name="standart_description">Standart Description\nRemove Ads</string>
    <string name="premium_description">Premium Description\nRemove Ads</string>
    <string name="vip_description">Vip Description\nRemove Ads</string>

    <string name="standart_price">10 TL</string>
    <string name="premium_price">20 TL</string>
    <string name="vip_price">30 TL</string>

</resources>
