<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tests"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_tests"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_all_chapters"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_chapters"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_specials_problems"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_specials"
        app:showAsAction="ifRoom" />
</menu>