<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    android:background="@color/fragment_upgrade_background_color"
    android:minHeight="250dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/upgradeNowImage"
        android:layout_weight="2"
        app:srcCompat="@drawable/vip"
        android:layout_margin="2dp"
        android:scaleType="centerCrop" />

    <View style="@style/Divider" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:layout_weight="1"
        android:id="@+id/rel1"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/lay1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buy_this_item_button"
            android:layout_marginRight="50dp">

            <TextView
                android:id="@+id/this_item_nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="Buy This Item"
                android:textSize="20dp"
                android:textColor="@color/fragment_upgrade_item_text_color"
                android:gravity="top|left"/>

            <TextView
                android:id="@+id/this_item_descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_below="@+id/this_item_nameText"
                android:text="Just only&#xA;asdasdasd"
                android:textSize="15dp"
                android:textColor="@color/fragment_upgrade_item_definition_color"
                android:gravity="top|left"/>
        </RelativeLayout>

        <Button
            android:id="@+id/buy_this_item_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="TL"
            android:textSize="12dp"
            android:textColor="@color/fragment_upgrade_button_color"
            android:background="@drawable/button_shape" />
    </RelativeLayout>

    <View style="@style/Divider" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:layout_weight="1"
        android:id="@+id/rel2"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/lay2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buy_standart_button"
            android:layout_marginRight="50dp">

            <TextView
                android:id="@+id/standart_nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/standart_text"
                android:textSize="20dp"
                android:textColor="@color/fragment_upgrade_item_text_color"
                android:gravity="top|left"/>

            <TextView
                android:id="@+id/standart_descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_below="@+id/standart_nameText"
                android:text="@string/standart_description"
                android:textSize="15dp"
                android:textColor="@color/fragment_upgrade_item_definition_color"
                android:gravity="top|left"/>
        </RelativeLayout>

        <Button
            android:id="@+id/buy_standart_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/standart_price"
            android:textSize="12dp"
            android:textColor="@color/fragment_upgrade_button_color"
            android:background="@drawable/button_shape"/>
    </RelativeLayout>

    <View style="@style/Divider" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:layout_weight="1"
        android:id="@+id/rel3"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/lay3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buy_premium_button"
            android:layout_marginRight="50dp">

            <TextView
                android:id="@+id/premium_nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/premium_text"
                android:textSize="20dp"
                android:textColor="@color/fragment_upgrade_item_text_color"
                android:gravity="left|center_vertical" />

            <TextView
                android:id="@+id/premium_descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_below="@+id/premium_nameText"
                android:text="@string/premium_description"
                android:textSize="15dp"
                android:textColor="@color/fragment_upgrade_item_definition_color"
                android:gravity="left|center_vertical" />
        </RelativeLayout>

        <Button
            android:id="@+id/buy_premium_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/premium_price"
            android:textSize="12dp"
            android:textColor="@color/fragment_upgrade_button_color"
            android:background="@drawable/button_shape"/>
    </RelativeLayout>

    <View style="@style/Divider" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="5"
        android:layout_weight="1"
        android:id="@+id/rel4"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/lay4"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buy_vip_button"
            android:layout_marginRight="50dp">

            <TextView
                android:id="@+id/vip_nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:text="@string/vip_text"
                android:textSize="20dp"
                android:textColor="@color/fragment_upgrade_item_text_color"
                android:gravity="left|center_vertical" />

            <TextView
                android:id="@+id/vip_descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_below="@+id/vip_nameText"
                android:text="@string/vip_description"
                android:textSize="15dp"
                android:textColor="@color/fragment_upgrade_item_definition_color"
                android:gravity="left|center_vertical" />
        </RelativeLayout>

        <Button
            android:id="@+id/buy_vip_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/vip_price"
            android:textSize="12dp"
            android:textColor="@color/fragment_upgrade_button_color"
            android:background="@drawable/button_shape"/>
    </RelativeLayout>


</LinearLayout>